--- a/testsuite/tests/profiling/should_run/prof-doc-last.prof.sample
+++ b/testsuite/tests/profiling/should_run/prof-doc-last.prof.sample
@@ -1,31 +1,34 @@
-	Thu Oct 27 09:37 2011 Time and Allocation Profiling Report  (Final)
+	Thu Apr  2 19:44 2015 Time and Allocation Profiling Report  (Final)
 
-	   prof-doc-last +RTS -hc -p -RTS
+	   prof-doc-last +RTS -p -RTS
 
-	total time  =        0.34 secs   (17 ticks @ 20 ms)
-	total alloc = 204,047,104 bytes  (excludes profiling overheads)
+	total time  =        0.16 secs   (160 ticks @ 1000 us, 1 processor)
+	total alloc = 648,053,608 bytes  (excludes profiling overheads)
 
 COST CENTRE  MODULE  %time %alloc
 
-main.ys      Main     35.3   39.2
-main.xs      Main     29.4   19.6
-last_init_ys Main     23.5   27.4
-last_init_xs Main     11.8   13.7
+last_init_ys Main     28.1   29.6
+main.ys      Main     26.2   24.7
+main.xs      Main     16.9   12.3
+last_init_xs Main     14.4   14.8
+last_ys      Main      7.5   12.3
+last_xs      Main      6.9    6.2
 
 
-                                                          individual     inherited
-COST CENTRE     MODULE                  no.     entries  %time %alloc   %time %alloc
+                                                         individual      inherited
+COST CENTRE     MODULE                no.     entries  %time %alloc   %time %alloc
 
-MAIN            MAIN                    101           0    0.0    0.0   100.0  100.0
- main           Main                    203           0    0.0    0.0     0.0    0.0
- CAF            Main                    201           0    0.0    0.0   100.0  100.0
-  main          Main                    202           1    0.0    0.0   100.0  100.0
-   last_init_ys Main                    209           1   23.5   27.4    23.5   27.4
-   main.ys      Main                    208           1   35.3   39.2    35.3   39.2
-   last_ys      Main                    207           1    0.0    0.0     0.0    0.0
-   last_init_xs Main                    206           1   11.8   13.7    11.8   13.7
-   main.xs      Main                    205           1   29.4   19.6    29.4   19.6
-   last_xs      Main                    204           1    0.0    0.0     0.0    0.0
- CAF            GHC.Conc.Signal         199           0    0.0    0.0     0.0    0.0
- CAF            GHC.IO.Encoding.Iconv   188           0    0.0    0.0     0.0    0.0
- CAF            GHC.IO.Handle.FD        180           0    0.0    0.0     0.0    0.0
+MAIN            MAIN                   99           0    0.0    0.0   100.0  100.0
+ CAF            Main                  197           0    0.0    0.0   100.0  100.0
+  main          Main                  198           1    0.0    0.0   100.0  100.0
+   last_init_ys Main                  204           1   28.1   29.6    28.1   29.6
+   main.ys      Main                  203           1   26.2   24.7    26.2   24.7
+   last_ys      Main                  202           1    7.5   12.3     7.5   12.3
+   last_init_xs Main                  201           1   14.4   14.8    14.4   14.8
+   main.xs      Main                  200           1   16.9   12.3    16.9   12.3
+   last_xs      Main                  199           1    6.9    6.2     6.9    6.2
+ CAF            GHC.Conc.Signal       179           0    0.0    0.0     0.0    0.0
+ CAF            GHC.IO.Encoding       163           0    0.0    0.0     0.0    0.0
+ CAF            GHC.IO.Encoding.Iconv 161           0    0.0    0.0     0.0    0.0
+ CAF            GHC.IO.Handle.FD      152           0    0.0    0.0     0.0    0.0
+ CAF            GHC.IO.Handle.Text    150           0    0.0    0.0     0.0    0.0
