--- a/testsuite/tests/profiling/should_run/T5559.prof.sample
+++ b/testsuite/tests/profiling/should_run/T5559.prof.sample
@@ -1,23 +1,25 @@
-	Wed Nov  9 09:45 2011 Time and Allocation Profiling Report  (Final)
+	Thu Apr  2 19:44 2015 Time and Allocation Profiling Report  (Final)
 
 	   T5559 +RTS -p -RTS
 
-	total time  =        0.08 secs   (4 ticks @ 20 ms)
-	total alloc =  52,274,888 bytes  (excludes profiling overheads)
+	total time  =        0.04 secs   (36 ticks @ 1000 us, 1 processor)
+	total alloc =  57,359,016 bytes  (excludes profiling overheads)
 
 COST CENTRE MODULE  %time %alloc
 
-føb         Main    100.0   99.9
+føb         Main     97.2   99.9
+MAIN        MAIN      2.8    0.0
 
 
-                                                      individual     inherited
-COST CENTRE MODULE                  no.     entries  %time %alloc   %time %alloc
+                                                     individual      inherited
+COST CENTRE MODULE                no.     entries  %time %alloc   %time %alloc
 
-MAIN        MAIN                    100           0    0.0    0.0   100.0  100.0
- CAF        GHC.IO.Handle.FD        126           0    0.0    0.1     0.0    0.1
- CAF        GHC.IO.Encoding.Iconv   118           0    0.0    0.0     0.0    0.0
- CAF        GHC.IO.Encoding         116           0    0.0    0.0     0.0    0.0
- CAF        GHC.Conc.Signal         108           0    0.0    0.0     0.0    0.0
- CAF        Main                    106           0    0.0    0.0   100.0   99.9
-  main      Main                    200           1    0.0    0.0   100.0   99.9
-   føb      Main                    201      392835  100.0   99.9   100.0   99.9
+MAIN        MAIN                   99           0    2.8    0.0   100.0  100.0
+ CAF        Main                  197           0    0.0    0.0    97.2   99.9
+  main      Main                  198           1    0.0    0.0    97.2   99.9
+   føb      Main                  199      392835   97.2   99.9    97.2   99.9
+ CAF        GHC.Conc.Signal       179           0    0.0    0.0     0.0    0.0
+ CAF        GHC.IO.Encoding       163           0    0.0    0.0     0.0    0.0
+ CAF        GHC.IO.Encoding.Iconv 161           0    0.0    0.0     0.0    0.0
+ CAF        GHC.IO.Handle.FD      152           0    0.0    0.1     0.0    0.1
+ CAF        GHC.IO.Handle.Text    150           0    0.0    0.0     0.0    0.0
