--- a/testsuite/tests/profiling/should_run/scc003.prof.sample
+++ b/testsuite/tests/profiling/should_run/scc003.prof.sample
@@ -1,25 +1,27 @@
-	Tue Oct 25 15:36 2011 Time and Allocation Profiling Report  (Final)
+	Thu Apr  2 19:44 2015 Time and Allocation Profiling Report  (Final)
 
 	   scc003 +RTS -p -RTS
 
-	total time  =        0.38 secs   (19 ticks @ 20 ms)
-	total alloc =  97,764,432 bytes  (excludes profiling overheads)
+	total time  =        0.13 secs   (132 ticks @ 1000 us, 1 processor)
+	total alloc = 195,487,784 bytes  (excludes profiling overheads)
 
 COST CENTRE MODULE  %time %alloc
 
 fib         Main    100.0  100.0
 
 
-                                                      individual     inherited
-COST CENTRE MODULE                  no.     entries  %time %alloc   %time %alloc
+                                                     individual      inherited
+COST CENTRE MODULE                no.     entries  %time %alloc   %time %alloc
 
-MAIN        MAIN                    102           0    0.0    0.0   100.0  100.0
- CAF        Main                    203           0    0.0    0.0   100.0  100.0
-  main      Main                    204           1    0.0    0.0   100.0  100.0
-   f        Main                    205           1    0.0    0.0   100.0  100.0
-    f.\     Main                    207           1    0.0    0.0   100.0   99.1
-     fib    Main                    208     2692537  100.0   99.1   100.0   99.1
-    fib     Main                    206       21891    0.0    0.8     0.0    0.8
- CAF        GHC.Conc.Signal         201           0    0.0    0.0     0.0    0.0
- CAF        GHC.IO.Encoding.Iconv   191           0    0.0    0.0     0.0    0.0
- CAF        GHC.IO.Handle.FD        183           0    0.0    0.0     0.0    0.0
+MAIN        MAIN                   99           0    0.0    0.0   100.0  100.0
+ CAF        Main                  197           0    0.0    0.0   100.0  100.0
+  main      Main                  198           1    0.0    0.0   100.0  100.0
+   f        Main                  199           1    0.0    0.0   100.0  100.0
+    f.\     Main                  201           1    0.0    0.0    99.2   99.2
+     fib    Main                  202     2692537   99.2   99.2    99.2   99.2
+    fib     Main                  200       21891    0.8    0.8     0.8    0.8
+ CAF        GHC.Conc.Signal       179           0    0.0    0.0     0.0    0.0
+ CAF        GHC.IO.Encoding       163           0    0.0    0.0     0.0    0.0
+ CAF        GHC.IO.Encoding.Iconv 161           0    0.0    0.0     0.0    0.0
+ CAF        GHC.IO.Handle.FD      152           0    0.0    0.0     0.0    0.0
+ CAF        GHC.IO.Handle.Text    150           0    0.0    0.0     0.0    0.0
