The production for `pquals` is incorrect; the specifics are in D803.
Reviewed By: austin

Differential Revision: https://phabricator.haskell.org/D803

GHC Trac Issues: #10207

(cherry picked from commit f1a4e42ea2e5302147dcb69b9baa6f4aa3af6e37)

--- a/testsuite/tests/ghc-api/annotations/Makefile
+++ b/testsuite/tests/ghc-api/annotations/Makefile
@@ -26,4 +26,9 @@ exampleTest:
 	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc exampleTest
 	./exampleTest "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
+listcomps:
+	rm -f listcomps.o listcomps.hi
+	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc listcomps
+	./listcomps "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
+
 .PHONY: clean
