--- a/testsuite/tests/ghc-api/annotations/Makefile
+++ b/testsuite/tests/ghc-api/annotations/Makefile
@@ -31,4 +31,9 @@ listcomps:
 	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc listcomps
 	./listcomps "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
-.PHONY: clean
+t10255:
+	rm -f t10255.o t10255.hi
+	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc t10255
+	./t10255 "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
+
+.PHONY: clean annotations parseTree comments exampleTest listcomps t10255
