--- a/testsuite/tests/rts/T9579/Makefile
+++ b/testsuite/tests/rts/T9579/Makefile
@@ -4,24 +4,30 @@ include $(TOP)/mk/test.mk
 
 T9579_stackoverflow_rtsnone:
 	'$(TEST_HC)' $(TEST_HC_OPTS) -rtsopts=none -fforce-recomp -with-rtsopts -K1m \
+		 -outputdir tmp_T9579_stackoverflow_rtsnone \
 		 StackOverflow.hs -o T9579_stackoverflow_rtsnone
 
 T9579_stackoverflow_rtssome:
 	'$(TEST_HC)' $(TEST_HC_OPTS) -rtsopts=some -fforce-recomp -with-rtsopts -K1m \
+		 -outputdir tmp_T9579_stackoverflow_rtssome \
 		 StackOverflow.hs -o T9579_stackoverflow_rtssome
 
 T9579_stackoverflow_rtsall:
 	'$(TEST_HC)' $(TEST_HC_OPTS) -rtsopts=all  -fforce-recomp -with-rtsopts -K1m \
+		 -outputdir tmp_T9579_stackoverflow_rtsall \
 		 StackOverflow.hs -o T9579_stackoverflow_rtsall
 
 T9579_outofheap_rtsnone:
 	'$(TEST_HC)' $(TEST_HC_OPTS) -rtsopts=none -fforce-recomp -with-rtsopts -M1m \
+		 -outputdir tmp_T9579_outofheap_rtsnone \
 		 OutOfHeap.hs -o T9579_outofheap_rtsnone
 
 T9579_outofheap_rtssome:
 	'$(TEST_HC)' $(TEST_HC_OPTS) -rtsopts=some -fforce-recomp -with-rtsopts -M1m \
+		 -outputdir tmp_T9579_outofheap_rtssome \
 		 OutOfHeap.hs -o T9579_outofheap_rtssome
 
 T9579_outofheap_rtsall:
 	'$(TEST_HC)' $(TEST_HC_OPTS) -rtsopts=all  -fforce-recomp -with-rtsopts -M1m \
+		 -outputdir tmp_T9579_outofheap_rtsall \
 		 OutOfHeap.hs -o T9579_outofheap_rtsall
