Fix #10182 by disallowing/avoiding self {-# SOURCE #-} imports
Summary:
hs-boot declarations were leaking into the EPS due to
self {-# SOURCE #-} imports, and interface loading induced by
orphan instances.  For the former, we simply disallow self
{-# SOURCE #-} imports; for the latter, we simply just don't
load an interface if it would be ourself.

Signed-off-by: Edward Z. Yang <ezyang@cs.stanford.edu>

Test Plan: validate

Reviewers: simonpj, austin

Subscribers: thomie

Differential Revision: https://phabricator.haskell.org/D860

GHC Trac Issues: #10182

--- a/testsuite/tests/driver/Makefile
+++ b/testsuite/tests/driver/Makefile
@@ -598,3 +598,10 @@ T9938B:
 	$(RM) -rf T9938B.o T9938B.hi T9938B
 	"$(TEST_HC)" $(TEST_HC_OPTS) -O2 -c T9938B.hs
 	"$(TEST_HC)" $(TEST_HC_OPTS) -O2 T9938B.o -o T9938B
+
+.PHONY: T10182
+T10182:
+	$(RM) -rf T10182.o T10182a.o T10182.o-boot T10182.hi T10182a.hi T10182.hi-boot
+	"$(TEST_HC)" $(TEST_HC_OPTS) -c T10182.hs-boot
+	"$(TEST_HC)" $(TEST_HC_OPTS) -c T10182a.hs
+	"$(TEST_HC)" $(TEST_HC_OPTS) -c T10182.hs
