Don't use self {-# SOURCE #-} import in test-cases.
Summary:
It's kind of buggy, c.f. #10182, and isn't motivated by any
real world programs, so we're going to get rid of it (despite
it being handy for GHC test cases.)

Signed-off-by: Edward Z. Yang <ezyang@cs.stanford.edu>

Test Plan: validate

Reviewers: simonpj, austin

Subscribers: thomie

Differential Revision: https://phabricator.haskell.org/D862

--- a/testsuite/tests/deriving/should_compile/Makefile
+++ b/testsuite/tests/deriving/should_compile/Makefile
@@ -5,5 +5,6 @@ include $(TOP)/mk/test.mk
 .PHONY: T1133
 T1133:
 	'$(TEST_HC)' $(TEST_HC_OPTS) -c T1133.hs-boot
+	'$(TEST_HC)' $(TEST_HC_OPTS) -c T1133a.hs
 	'$(TEST_HC)' $(TEST_HC_OPTS) -c T1133.hs
 
