--- a/libraries/template-haskell/template-haskell.cabal
+++ b/libraries/template-haskell/template-haskell.cabal
@@ -48,9 +48,14 @@ Library
         Language.Haskell.TH.Lib.Map
 
     build-depends:
-        base       == 4.8.*,
+        base       >= 4.7 && < 4.9,
         pretty     == 1.1.*
 
     -- We need to set the package key to template-haskell (without a
     -- version number) as it's magic.
-    ghc-options: -Wall -this-package-key template-haskell
+    ghc-options: -Wall
+
+    if impl( ghc >= 7.9 )
+        ghc-options:  -this-package-key template-haskell
+    else
+        ghc-options:  -package-name template-haskell
