ApiAnnotations : RdrHsSyn.isFunLhs discards parentheses
Summary:
The RdrHsSyn.isFunLhs function has the following

  isFunLhs e = go e []
   where
     go (L loc (HsVar f)) es
          | not (isRdrDataCon f)   = return (Just (L loc f, False, es))
     go (L _ (HsApp f e)) es       = go f (e:es)
     go (L _ (HsPar e))   es@(_:_) = go e es

The treatment of HsPar means that any parentheses around an infix function will be discarded.

e.g.

  (f =*= g) sa i = f (toF sa i) =^= g (toG sa i)

will lose the ( before f and the closing one after g

Test Plan: ./validate

Reviewers: hvr, austin

Reviewed By: austin

Subscribers: bgamari, thomie

Differential Revision: https://phabricator.haskell.org/D832

GHC Trac Issues: #10269

--- a/testsuite/tests/ghc-api/annotations/Makefile
+++ b/testsuite/tests/ghc-api/annotations/Makefile
@@ -5,6 +5,7 @@ include $(TOP)/mk/test.mk
 clean:
 	rm -f *.o *.hi
 	rm -f annotations comments parseTree exampleTest
+	rm -f t10269
 
 annotations: 
 	rm -f annotations.o annotations.hi
@@ -44,3 +45,10 @@ T10268:
 	./t10268 "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
 .PHONY: clean annotations parseTree comments exampleTest listcomps
+
+T10269:
+	rm -f T10269.o T10269.hi
+	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc t10269
+	./t10269 "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
+
+.PHONY: t10269
