--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -52,7 +52,6 @@ Library
                    containers >= 0.5 && < 0.6,
                    array      >= 0.1 && < 0.6,
                    filepath   >= 1   && < 1.5,
-                   template-haskell,
                    hpc,
                    transformers,
                    bin-package-db,
@@ -66,6 +65,7 @@ Library
     GHC-Options: -Wall -fno-warn-name-shadowing
 
     if flag(ghci)
+        Build-Depends: template-haskell
         CPP-Options: -DGHCI
         Include-Dirs: ../rts/dist/build @FFIIncludeDir@
 
@@ -164,7 +164,6 @@ Library
         IdInfo
         Lexeme
         Literal
-        DsMeta
         Llvm
         Llvm.AbsSyn
         Llvm.MetaData
@@ -567,6 +566,7 @@ Library
 
     if flag(ghci)
         Exposed-Modules:
+            DsMeta
             Convert
             ByteCodeAsm
             ByteCodeGen
