Turn off warnings when compiling boolFormula
Summary:
There is a problem where harbourmaster builds complain about a bad
boolFormula.stderr

    ghc-api/annotations boolFormula [bad stderr] (normal)

The problem does not occur for a local build on my box

This patch turns off warnings for this test, to get rid of the stderr
issue.

Test Plan: ./validate

Reviewers: hvr, austin

Reviewed By: austin

Subscribers: bgamari, thomie, hvr

Differential Revision: https://phabricator.haskell.org/D888

(cherry picked from commit 6ee4b6fdfb07bb479a1a9ab3e3866ca6a6192e20)

--- a/testsuite/tests/ghc-api/annotations/Makefile
+++ b/testsuite/tests/ghc-api/annotations/Makefile
@@ -100,7 +100,8 @@ t10309:
 
 boolFormula:
 	rm -f boolFormula.o boolFormula.hi
-	'$(TEST_HC)' $(TEST_HC_OPTS) --make -v0 -package ghc boolFormula
+  # Disable all warnings to make sure boolFormula.stderr is repeatable
+	'$(TEST_HC)' $(TEST_HC_OPTS) --make -w -v0 -package ghc boolFormula
 	./boolFormula "`'$(TEST_HC)' $(TEST_HC_OPTS) --print-libdir | tr -d '\r'`"
 
 .PHONY: clean annotations parseTree comments exampleTest listcomps boolFormula
