--- a/libraries/ghc-prim/ghc-prim.cabal
+++ b/libraries/ghc-prim/ghc-prim.cabal
@@ -21,6 +21,9 @@ flag include-ghc-prim
     Description: Include GHC.Prim in exposed-modules
     default: False
 
+custom-setup
+    setup-depends: base >= 4 && < 5, Cabal >= 1.23
+
 Library
     default-language: Haskell2010
     other-extensions:
