Testsuite: don't show compile/link info for some tests
This info is not needed in the testlogs, and was actually making these
tests fail on my machine because of some bug with the timeout program:
...
[1 of 1] Compiling Main ( OutOfHeap.hs, tmp_T9579_outofheap_rtssome/Main.o )
Linking T9579_outofheap_rtsnone ...
...

--- a/testsuite/tests/ghci/scripts/Makefile
+++ b/testsuite/tests/ghci/scripts/Makefile
@@ -46,7 +46,7 @@ T9367:
 
 .PHONY: T9762_prep
 T9762_prep:
-	'$(TEST_HC)' $(TEST_HC_OPTS) -O -fhpc -dynamic T9762B.hs
+	'$(TEST_HC)' $(TEST_HC_OPTS) -v0 -O -fhpc -dynamic T9762B.hs
 
 .PHONY: T10408A
 T10408A:
